# nomacs-windows-ocr

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: Utils.cmake
src/: DkOcrPlugin.cpp  DkOcrPlugin.h  DkOcrPlugin.json  WinOcrEngine.cpp  WinOcrEngine.h
